hphp/test/slow/array_provenance/collection.php.expectf
darray(2) {
  ["outer"]=>
  string(0) ""
  ["inner"]=>
  string(%d) "%s/collection.php:26"
}
darray(2) {
  ["outer"]=>
  string(0) ""
  ["inner"]=>
  string(%d) "%s/collection.php:27"
}

Fatal error: Uncaught Error: done in %s/collection.php:28
Stack trace:
%A
